WebServer with streaming HTTP PUT API

--- a/client/web-client/src/index.css
+++ b/client/web-client/src/index.css
@@ -27,3 +27,11 @@ div.sound-controls > * {
 }
 #oscilloscope {
 }
+
+li.input {
+  list-style-type: circle;
+}
+li.response {
+  list-style-type: square;
+  margin-left: 1.5em;
+}
